fix js & css for event tasks & shifts

--- a/style.css
+++ b/style.css
@@ -675,6 +675,7 @@ ul#a21_job_menu li{ display: inline-block; padding: 10px 20px; }
     margin: 0;
     width: 100% !important;
 }
+#a21_bgc_add_new_row, #a21_bgc_add_new_column{display: table;}
 #add-event-form #total-volunteers{ width: 70px;  }
 /* ******* PAGE CALENDAR ********* */
 
